# pydantic-faker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_models.py
src/pydantic_faker/: __init__.py  cli.py  core.py  server.py
tests/: helpers.py  test_cli.py  test_core.py  test_server_endpoints.py
